--- a/index.html
+++ b/index.html
@@ -1,20 +1,156 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PHA5</title>
+
     <!-- DaisyUI cdn -->
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css"
       rel="stylesheet"
       type="text/css"
     />
+
     <!-- tailwind cdn -->
     <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body>
-    <div class="text-rose-200">Hello worlsdafodd</div>
+  </head>
+  <body>
+    <!-- Navigation Section -->
+    <nav class="bg-orange-50">
+      <div class="lg:flex justify-around items-center p-5">
+        <div class="flex justify-center items-center gap-2">
+          <button id="blog" class="btn bg-green-400" onclick="changePageToFAQ()">Blog</button>
+        </div>
+        <div class="flex justify-center items-center gap-2">
+          <img class="w-8" src="./images/logo.png" alt="Image of the Logo" />
+          <h2 class="font-bold">Donate Bangladesh</h2>
+        </div>
+        <div class="flex justify-center items-center gap-2">
+          <img src="./images/coin.png" alt="Image of a coin" />
+          <h2>5500 BDT</h2>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Buttons Section -->
+    <div class="flex justify-center items-center gap-2 mt-10">
+      <button class="btn bg-white">Donation</button>
+      <button class="btn bg-white">History</button>
+    </div>
+
+    <!-- Donation Section -->
+    <div class="">
+      <!-- Donation 1 -->
+      <div
+        class="mx-auto m-1 border rounded-lg lg:w-9/12 w-11/12 lg:flex justify-center items-center gap-2 mt-10"
+      >
+        <div class="w-11/12 p-4 mx-auto lg:w-1/2">
+          <img
+            class="border-2 border-dashed"
+            src="./images/noakhali.png"
+            alt="Image of people on a life boat"
+          />
+        </div>
+        <div class="w-11/12 p-4 mx-auto lg:w-1/2 flex flex-col gap-4">
+          <div
+            class="flex justify-start items-center gap-2 bg-slate-200 rounded-lg px-2 py-1 w-1/3 lg:w-1/5"
+          >
+            <img src="./images/coin.png" alt="Image of a coin" />
+            <p>0 BDT</p>
+          </div>
+          <h2 class="font-bold">Donate for Flood at Noakhali, Bangladesh</h2>
+          <p class="text-slate-500">
+            The recent floods in Noakhali have caused significant damage to
+            homes infrastructure. Your donation will help provide essential
+            supplies and to those affected by this disaster. Every contribution,
+            big or small, makes difference. Please join us in supporting the
+            relief efforts and making a positive impact on the lives of those in
+            need.
+          </p>
+          <input
+            class="border rounded-lg p-2"
+            type="text"
+            placeholder="Write Donation Amount"
+          />
+          <button class="btn bg-green-400">Donate Now</button>
+        </div>
+      </div>
+
+      <!-- Donation 2 -->
+      <div
+        class="mx-auto m-1 border rounded-lg lg:w-9/12 w-11/12 lg:flex justify-center items-center gap-2 mt-10"
+      >
+        <div class="w-11/12 p-4 mx-auto lg:w-1/2">
+          <img
+            class="border-2 border-dashed"
+            src="./images/feni.png"
+            alt="Image of people on a life boat"
+          />
+        </div>
+        <div class="w-11/12 p-4 mx-auto lg:w-1/2 flex flex-col gap-4">
+          <div
+            class="flex justify-start items-center gap-2 bg-slate-200 rounded-lg px-2 py-1 w-1/3 lg:w-1/5"
+          >
+            <img src="./images/coin.png" alt="Image of a coin" />
+            <p>0 BDT</p>
+          </div>
+          <h2 class="font-bold">Donate for Flood at Noakhali, Bangladesh</h2>
+          <p class="text-slate-500">
+            The recent floods in Noakhali have caused significant damage to
+            homes infrastructure. Your donation will help provide essential
+            supplies and to those affected by this disaster. Every contribution,
+            big or small, makes difference. Please join us in supporting the
+            relief efforts and making a positive impact on the lives of those in
+            need.
+          </p>
+          <input
+            class="border rounded-lg p-2"
+            type="text"
+            placeholder="Write Donation Amount"
+          />
+          <button class="btn bg-green-400">Donate Now</button>
+        </div>
+      </div>
+
+      <!-- Donation 3 -->
+      <div
+        class="mx-auto m-1 border rounded-lg lg:w-9/12 w-11/12 lg:flex justify-center items-center gap-2 mt-10"
+      >
+        <div class="w-11/12 p-4 mx-auto lg:w-1/2">
+          <img
+            class="border-2 border-dashed"
+            src="./images/quota-protest.png"
+            alt="Image of people on a life boat"
+          />
+        </div>
+        <div class="w-11/12 p-4 mx-auto lg:w-1/2 flex flex-col gap-4">
+          <div
+            class="flex justify-start items-center gap-2 bg-slate-200 rounded-lg px-2 py-1 w-1/3 lg:w-1/5"
+          >
+            <img src="./images/coin.png" alt="Image of a coin" />
+            <p>0 BDT</p>
+          </div>
+          <h2 class="font-bold">Donate for Flood at Noakhali, Bangladesh</h2>
+          <p class="text-slate-500">
+            The recent floods in Noakhali have caused significant damage to
+            homes infrastructure. Your donation will help provide essential
+            supplies and to those affected by this disaster. Every contribution,
+            big or small, makes difference. Please join us in supporting the
+            relief efforts and making a positive impact on the lives of those in
+            need.
+          </p>
+          <input
+            class="border rounded-lg p-2"
+            type="text"
+            placeholder="Write Donation Amount"
+          />
+          <button class="btn bg-green-400">Donate Now</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- JS script -->
     <script src="./js/index.js"></script>
-</body>
+  </body>
 </html>
