--- a/faq.html
+++ b/faq.html
@@ -21,7 +21,9 @@
     <nav class="bg-orange-50">
       <div class="lg:flex justify-around items-center p-5">
         <div class="flex justify-center items-center gap-2">
-          <button class="btn bg-green-400" onclick="changePageToHome()">Home</button>
+          <button class="btn bg-green-400" onclick="changePageToHome()">
+            Home
+          </button>
         </div>
         <div class="flex justify-center items-center gap-2">
           <img class="w-8" src="./images/logo.png" alt="Image of the Logo" />
@@ -35,6 +37,46 @@
     </nav>
 
     <!-- FAQ Section -->
+    <div class="w-5/6 mt-10 mx-auto">
+      <h1 class="font-bold py-5 text-2xl">Important FAQ</h1>
+      <div class="collapse collapse-arrow join-item border-base-300 border">
+        <input type="radio" name="my-accordion-4" checked="checked" />
+        <div class="collapse-title text-xl font-medium">
+          What is the Document Object Model (DOM)?
+        </div>
+        <div class="collapse-content">
+          <p>hello</p>
+        </div>
+      </div>
+      <div class="collapse collapse-arrow join-item border-base-300 border">
+        <input type="radio" name="my-accordion-4" />
+        <div class="collapse-title text-xl font-medium">
+          How do you select and element from the DOM?
+        </div>
+        <div class="collapse-content">
+          <p>hello</p>
+        </div>
+      </div>
+      <div class="collapse collapse-arrow join-item border-base-300 border">
+        <input type="radio" name="my-accordion-4" />
+        <div class="collapse-title text-xl font-medium">
+          What is event delegation in the context of the DOM, and why it is
+          useful?
+        </div>
+        <div class="collapse-content">
+          <p>hello</p>
+        </div>
+      </div>
+      <div class="collapse collapse-arrow join-item border-base-300 border">
+        <input type="radio" name="my-accordion-4" />
+        <div class="collapse-title text-xl font-medium">
+          How do you manipulate and element's attributes and using the DOM?˝
+        </div>
+        <div class="collapse-content">
+          <p>hello</p>
+        </div>
+      </div>
+    </div>
 
     <!-- JS script -->
     <script src="./js/index.js"></script>
