--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="flex justify-center items-center gap-2">
           <img src="./images/coin.png" alt="Image of a coin" />
-          <h2>5500 BDT</h2>
+          <h2><span id="current-balance">5500</span> BDT</h2>
         </div>
       </div>
     </nav>
@@ -64,10 +64,10 @@
         </div>
         <div class="w-11/12 p-4 mx-auto lg:w-1/2 flex flex-col gap-4">
           <div
-            class="flex justify-start items-center gap-2 bg-slate-200 rounded-lg px-2 py-1 w-1/3 lg:w-1/5"
+            class="flex justify-start items-center gap-2 bg-slate-200 rounded-lg px-2 py-1 w-fit"
           >
             <img src="./images/coin.png" alt="Image of a coin" />
-            <p>0 BDT</p>
+            <p><span id="donate-one-amount">0</span> BDT</p>
           </div>
           <h2 class="font-bold">Donate for Flood at Noakhali, Bangladesh</h2>
           <p class="text-slate-500">
@@ -79,11 +79,14 @@
             need.
           </p>
           <input
+            id="donate-one-input"
             class="border rounded-lg p-2"
             type="text"
             placeholder="Write Donation Amount"
           />
-          <button class="btn bg-green-400">Donate Now</button>
+          <button id="donate-one-btn" class="btn bg-green-400">
+            Donate Now
+          </button>
         </div>
       </div>
 
@@ -100,7 +103,7 @@
         </div>
         <div class="w-11/12 p-4 mx-auto lg:w-1/2 flex flex-col gap-4">
           <div
-            class="flex justify-start items-center gap-2 bg-slate-200 rounded-lg px-2 py-1 w-1/3 lg:w-1/5"
+            class="flex justify-start items-center gap-2 bg-slate-200 rounded-lg px-2 py-1 w-fit"
           >
             <img src="./images/coin.png" alt="Image of a coin" />
             <p>0 BDT</p>
@@ -136,7 +139,7 @@
         </div>
         <div class="w-11/12 p-4 mx-auto lg:w-1/2 flex flex-col gap-4">
           <div
-            class="flex justify-start items-center gap-2 bg-slate-200 rounded-lg px-2 py-1 w-1/3 lg:w-1/5"
+            class="flex justify-start items-center gap-2 bg-slate-200 rounded-lg px-2 py-1 w-fit"
           >
             <img src="./images/coin.png" alt="Image of a coin" />
             <p>0 BDT</p>
