--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
             <img src="./images/coin.png" alt="Image of a coin" />
             <p><span id="donate-one-amount">0</span> BDT</p>
           </div>
-          <h2 class="font-bold">Donate for Flood at Noakhali, Bangladesh</h2>
+          <h2 id="donate-one-title" class="font-bold">
+            Donate for Flood at Noakhali, Bangladesh
+          </h2>
           <p class="text-slate-500">
             The recent floods in Noakhali have caused significant damage to
             homes infrastructure. Your donation will help provide essential
@@ -84,9 +86,26 @@
             type="text"
             placeholder="Write Donation Amount"
           />
-          <button id="donate-one-btn" class="btn bg-green-400">
+          <button
+            id="donate-one-btn"
+            class="btn bg-green-400"
+            onclick="my_modal_1.showModal()"
+          >
             Donate Now
           </button>
+          <dialog id="my_modal_1" class="modal">
+            <div class="modal-box flex flex-col justify-center items-center">
+              <h3 class="text-xl font-bold">Congrats</h3>
+              <img class="mt-3" src="./images/coin.png" alt="Image of a coin" />
+              <p class="py-4 text-slate-500">You Have Donated for Humankind</p>
+              <h4 class="font-bold">Successfully</h4>
+              <div class="modal-action">
+                <form method="dialog">
+                  <button class="btn">Close Confirmtion</button>
+                </form>
+              </div>
+            </div>
+          </dialog>
         </div>
       </div>
 
@@ -164,7 +183,7 @@
     </div>
 
     <!-- History Section -->
-    <div id="history-section"></div>
+    <div id="history-section" class="hidden"></div>
 
     <!-- JS script -->
     <script src="./js/index.js"></script>
