--- a/index.html
+++ b/index.html
@@ -89,11 +89,10 @@
           <button
             id="donate-one-btn"
             class="btn bg-green-400"
-            onclick="my_modal_1.showModal()"
           >
             Donate Now
           </button>
-          <dialog id="my_modal_1" class="modal">
+          <dialog id="my-modal-1" class="modal">
             <div class="modal-box flex flex-col justify-center items-center">
               <h3 class="text-xl font-bold">Congrats</h3>
               <img class="mt-3" src="./images/coin.png" alt="Image of a coin" />
