Made some small changes

--- a/faq.html
+++ b/faq.html
@@ -45,7 +45,7 @@
           What is the Document Object Model (DOM)?
         </div>
         <div class="collapse-content">
-          <p>hello</p>
+          <p>Document Object Model is a object representation of the HTML document. This DOM represents elements in the page such that they be accessed and modified.</p>
         </div>
       </div>
       <div class="collapse collapse-arrow join-item border-base-300 border">
@@ -54,7 +54,7 @@
           How do you select and element from the DOM?
         </div>
         <div class="collapse-content">
-          <p>hello</p>
+          <p>We select elements from the DOM by using javascript methods and the elements' ids, class names etc.</p>
         </div>
       </div>
       <div class="collapse collapse-arrow join-item border-base-300 border">
@@ -64,7 +64,7 @@
           useful?
         </div>
         <div class="collapse-content">
-          <p>hello</p>
+          <p>Events in a element bubble up the DOM tree. Event delegation is delegating or using the parent element to target the element instead of using the element itself. This helps us write cleaner code since do not have to listen to the event on every child element rather just listen to the parent</p>
         </div>
       </div>
       <div class="collapse collapse-arrow join-item border-base-300 border">
@@ -73,7 +73,7 @@
           How do you manipulate and element's attributes and using the DOM?˝
         </div>
         <div class="collapse-content">
-          <p>hello</p>
+          <p>We use the javascript methods such as setAttibute, removeAttribute etc. to manipulate an element's after acquiring the element using methods such as getElementByID, querySelector etc.</p>
         </div>
       </div>
     </div>
